Fixed overflow changing size of main div on portfolio page

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 html,
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     border: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 body {
@@ -25,14 +27,18 @@ body {
 
 /* #region || GENERAL STYLES */
 
+
 .main {
     /* animation: 0.6s ease-out 0s 1 loadDown; */
     background: var(--main-bg-color);
     width: 50%;
-    position: static;
-    float: centre;
     top: 0;  
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex-grow: 4;
     margin: auto;
+    position: relative;
     padding: 20px;
     height: auto;
 }
@@ -45,11 +51,11 @@ body {
     font-family: 'Lucida Console', sans-serif;
     color: white;
     background-color: #081f3c;
-    font-size: 250%;
+    font-size: 200%;
     font-weight: 100;
     line-height: 20px;
     letter-spacing: 1px;
-    padding: 1px 1px 1px;
+    padding: 1px 10px 1px;
     width: 75%;
     margin: auto;
     text-align: center;
@@ -67,7 +73,7 @@ body {
     width: 75%;
     margin: auto;
     text-align: center;
-    font-size: 150%;
+    font-size: 100%;
     font-weight: 100;
     line-height: 16px;
     letter-spacing: 1px;
@@ -84,11 +90,11 @@ body {
     width: 75%;
     margin: auto;
     text-align: left;
-    font-size: 150%;
+    font-size: 100%;
     font-weight: 100;
     line-height: 16px;
     letter-spacing: 1px;
-    padding: 0 0 1px;
+    padding: 10px 10px 20px;
     border-bottom: double #555;
     border: 2px solid white;
 }
@@ -142,7 +148,6 @@ h2 {
     width: 50%;
     background-color: #86878F;
     position: relative;
-    float: centre;
     padding-left: 20px;
     padding-right: 20px;
     top: 0;
@@ -200,8 +205,13 @@ h2 {
 
 /* #region || IMAGES */
 
+.container {
+    background-size: contain;
+    overflow: none;
+}
+
 img {
-    max-width: 95%;
+    max-width: 90%;
     height: auto;
     transition: 200ms;
 }
@@ -210,6 +220,8 @@ img:hover {
     transform: scale(1.05);
     opacity: 0.9;
     border: #333;
+    outline: solid 2px rgb(66, 184, 135);
+
 }
 
 /* #endregion */
@@ -346,7 +358,6 @@ iframe {
         line-height: 20px;
         letter-spacing: 1px;
         padding: 0 0 1px;
-        border-bottom: double #555;
     }
 
     .smallbox {
@@ -360,7 +371,6 @@ iframe {
         line-height: 16px;
         letter-spacing: 1px;
         padding: 0 0 1px;
-        border-bottom: double #555;
     }
 
     .smallbox.l {
@@ -374,7 +384,6 @@ iframe {
         line-height: 16px;
         letter-spacing: 1px;
         padding: 0 0 1px;
-        border-bottom: double #555;
     }
 
     button {
